--- a/books/en.lproj/MainWindow.xib
+++ b/books/en.lproj/MainWindow.xib
@@ -49,12 +49,10 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIWindow" id="380026005">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">1316</int>
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
 				<string key="NSFrameSize">{320, 480}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -74,13 +72,13 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
-				<object class="IBUINavigationController" key="IBUISelectedViewController" id="52119172">
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="268847776">
-						<string key="IBUITitle">Books</string>
+				<object class="IBUINavigationController" key="IBUISelectedViewController" id="214536135">
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="949710451">
+						<string key="IBUITitle">Chat</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
-					<string key="IBUINibName">BooksViewController</string>
+					<string key="IBUINibName">ChatViewController</string>
 					<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 					<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 						<int key="IBUIInterfaceOrientation">1</int>
@@ -88,7 +86,7 @@
 					</object>
 					<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					<bool key="IBUIHorizontal">NO</bool>
-					<object class="IBUINavigationBar" key="IBUINavigationBar" id="316297906">
+					<object class="IBUINavigationBar" key="IBUINavigationBar" id="517707605">
 						<nil key="NSNextResponder"/>
 						<int key="NSvFlags">256</int>
 						<string key="NSFrameSize">{0, 0}</string>
@@ -99,12 +97,18 @@
 					</object>
 					<object class="NSMutableArray" key="IBUIViewControllers">
 						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="IBUIViewController" id="250241890">
-							<object class="IBUINavigationItem" key="IBUINavigationItem" id="731278601">
-								<string key="IBUITitle">Books</string>
+						<object class="IBUIViewController" id="154526116">
+							<object class="IBUINavigationItem" key="IBUINavigationItem" id="559305991">
+								<string key="IBUITitle">Chat</string>
+								<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="650462014">
+									<string key="IBUITitle">New</string>
+									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									<int key="IBUIStyle">1</int>
+									<reference key="IBUINavigationItem" ref="559305991"/>
+								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<reference key="IBUIParentViewController" ref="52119172"/>
+							<reference key="IBUIParentViewController" ref="214536135"/>
 							<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 								<int key="IBUIInterfaceOrientation">1</int>
 								<int key="interfaceOrientation">1</int>
@@ -170,14 +174,13 @@
 							</object>
 						</object>
 					</object>
-					<reference ref="52119172"/>
-					<object class="IBUINavigationController" id="214536135">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="949710451">
-							<string key="IBUITitle">Chat</string>
+					<object class="IBUINavigationController" id="52119172">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="268847776">
+							<string key="IBUITitle">Books</string>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
-						<string key="IBUINibName">ChatViewController</string>
+						<string key="IBUINibName">BooksViewController</string>
 						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
@@ -185,7 +188,7 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
-						<object class="IBUINavigationBar" key="IBUINavigationBar" id="517707605">
+						<object class="IBUINavigationBar" key="IBUINavigationBar" id="316297906">
 							<nil key="NSNextResponder"/>
 							<int key="NSvFlags">256</int>
 							<string key="NSFrameSize">{0, 0}</string>
@@ -196,18 +199,12 @@
 						</object>
 						<object class="NSMutableArray" key="IBUIViewControllers">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIViewController" id="154526116">
-								<object class="IBUINavigationItem" key="IBUINavigationItem" id="559305991">
-									<string key="IBUITitle">Chat</string>
-									<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="650462014">
-										<string key="IBUITitle">New</string>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<int key="IBUIStyle">1</int>
-										<reference key="IBUINavigationItem" ref="559305991"/>
-									</object>
+							<object class="IBUIViewController" id="250241890">
+								<object class="IBUINavigationItem" key="IBUINavigationItem" id="731278601">
+									<string key="IBUITitle">Books</string>
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
-								<reference key="IBUIParentViewController" ref="214536135"/>
+								<reference key="IBUIParentViewController" ref="52119172"/>
 								<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 									<int key="IBUIInterfaceOrientation">1</int>
 									<int key="interfaceOrientation">1</int>
@@ -217,13 +214,13 @@
 							</object>
 						</object>
 					</object>
+					<reference ref="214536135"/>
 				</object>
 				<object class="IBUITabBar" key="IBUITabBar" id="795333663">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">266</int>
 					<string key="NSFrame">{{0, 431}, {320, 49}}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSNextKeyView"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
 						<bytes key="NSWhite">MCAwAA</bytes>
